--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <div class="fullpage">
-        <section class="section main" style="z-index: 999;">
+        <section class="section main">
             <div class="wrap">
                 <div class="container">
                     <div class="main__top">
@@ -683,6 +683,7 @@
                             </div>
                         </div>
                     </div>
+                    <a class="home-features__more">ПОКАЗАТЬ ЕЩЁ</a>
                 </div>
             </div>
         </section>
@@ -775,7 +776,7 @@
                                 <label class="check">
                                     <input type="checkbox" checked required>
                                     <span></span>
-                                    Даю <a href="">согласие на обработку</a> моих персональных данных
+                                    <b>Даю <a href="">согласие на обработку</a> моих персональных данных</b>
                                 </label>
                                 <button class="home-contacts__form-btn">ОТПРАВИТЬ</button>
                             </div>
@@ -791,7 +792,7 @@
         <div class="popup-wrap">
             <div class="popup-rekv animate__animated animate__backInUp">
                 <div class="popup-close"><img src="img/close.svg" alt=""></div>
-                <div class="popup-rekv__title">РЕКВИЗИТЫ</div>
+                <div class="popup-rekv__title">Реквизиты</div>
                 <div class="popup-rekv__cont">
                     <div class="popup-rekv____block">
                         <b>Наименование:</b> ООО «Русхит»
@@ -850,7 +851,7 @@
                         <label class="check">
                             <input type="checkbox" checked required>
                             <span></span>
-                            Даю <a href="">согласие на обработку</a> моих персональных данных
+                            <b>Даю <a href="">согласие на обработку</a> моих персональных данных</b>
                         </label>
                         <button class="home-contacts__form-btn popup-call__btn">ОТПРАВИТЬ</button>
                     </div>
